Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/typevars/5060485/Neg2.out
Neg2.java:9:19: compiler.err.cyclic.inheritance: X
1 error
